# Baxter-Robotic-Arm

./: .gitignore  1  README.md
src/baxter_simulator/baxter_gazebo/: CMakeLists.txt  package.xml
src/baxter_simulator/baxter_gazebo/include/occupancy_grid/: occupancy_grid.h
src/baxter_simulator/baxter_gazebo/launch/: custom_world.launch
src/baxter_simulator/baxter_gazebo/msg/: ocg.msg
src/baxter_simulator/baxter_gazebo/src/: kinect_broadcaster.py  occupancy_grid.cpp  octomap_pasrser.cpp  plotter.py  plotter2.py
src/baxter_simulator/baxter_gazebo/srv/: OccupancyGridPlot.srv
src/d_star/: CMakeLists.txt  package.xml
src/d_star/include/d_star/: d_star.h  waypoint.h
src/d_star/src/: d_star.cpp  waypoint.cpp
